--- a/work.html
+++ b/work.html
@@ -38,10 +38,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" style="color: #3c66ac;" aria-current="page" href="index.html">CSS</a>
+            <a class="nav-link" style="color: #3c66ac;" aria-current="page" href="index2.html">CSS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #3c66ac;" href="index.html" onclick="about();return false;">ประโยชน์</a>
+            <a class="nav-link" style="color: #3c66ac;" href="index2.html" onclick="about();return false;">ประโยชน์</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" style="color: #3c66ac;" aria-current="page" href="work.html">การใช้งาน</a>
